--- a/app/pages/business_card_creation/index.njk
+++ b/app/pages/business_card_creation/index.njk
@@ -42,23 +42,23 @@
       <div class="containers">
         <ul class="flex jcC gap30 inherit anc01__box">
           <li>
-            <a href="#">ビジネス規模で選ぶ</a>
+            <a href="#scale">ビジネス規模で選ぶ</a>
           </li>
           <li>
-            <a href="#">目的や使い方で選ぶ</a>
+            <a href="#purpose">目的や使い方で選ぶ</a>
           </li>
           <li>
-            <a href="#">選ばれる理由</a>
+            <a href="#card">カード比較・診断</a>
           </li>
           <li>
-            <a href="#">選ばれる理由</a>
+            <a href="#reason">選ばれる理由</a>
           </li>
         </ul>
       </div>
     </div>
   </section>
 
-  <section class="section-secondary">
+  <section id="scale" class="section-secondary">
     <div class="containers">
       <h2 class="ttl-secondary">ビジネスカードを選ぶときのポイント</h2>
 
@@ -175,7 +175,7 @@
             </div>
           </div>
           <div>
-            <div class="title-row">支払い サイクル</div>
+            <div class="title-row">支払い <br> サイクル</div>
             <div class="card-row">
               <div class="ttl-secondary">
                 最大84日間
@@ -195,7 +195,7 @@
             </div>
           </div>
           <div>
-            <div class="title-row">キャッシュ バック 還元率</div>
+            <div class="title-row">キャッシュ <br> バック 還元率</div>
             <div class="card-row">
               <div class="ttl-secondary">
                 1.0%
@@ -215,7 +215,7 @@
             </div>
           </div>
           <div>
-            <div class="title-row">永久不滅 ポイント 還元率</div>
+            <div class="title-row">永久不滅 <br> ポイント <br> 還元率</div>
             <div class="card-row">
               <div class="ttl-secondary">
                 なし
@@ -235,7 +235,7 @@
             </div>
           </div>
           <div>
-            <div class="title-row">JALマイル 還元率</div>
+            <div class="title-row">JALマイル <br> 還元率</div>
 
             <div class="card-row">
               <div class="ttl-secondary">
@@ -341,7 +341,7 @@
             </div>
           </div>
           <div>
-            <div class="title-row">支払い サイクル</div>
+            <div class="title-row">支払い <br> サイクル</div>
             <div class="card-row">
               <div class="ttl-secondary">
                 最大56日間 <br> <br> <span class="ttl-normal">毎月10日 締め/翌月4 日払い</span>
@@ -355,7 +355,7 @@
             </div>
           </div>
           <div>
-            <div class="title-row">キャッシュ バック 還元率</div>
+            <div class="title-row">キャッシュ <br> バック 還元率</div>
             <div class="card-row">
               <div class="ttl-secondary">
                 なし
@@ -369,7 +369,7 @@
             </div>
           </div>
           <div>
-            <div class="title-row">永久不滅 ポイント 還元率</div>
+            <div class="title-row">永久不滅 <br> ポイント <br> 還元率</div>
             <div class="card-row">
               <div class="ttl-secondary">
                 【国内】0.5% 【海外】1.0%
@@ -383,7 +383,7 @@
             </div>
           </div>
           <div>
-            <div class="title-row">JALマイル 還元率</div>
+            <div class="title-row">JALマイル <br> 還元率</div>
 
             <div class="card-row">
               <div class="ttl-secondary">
@@ -418,7 +418,7 @@
     </div>
   </section>
 
-  <section class="section-quaternary">
+  <section id="purpose" class="section-quaternary">
     <div class="containers">
       <h3 class="ttl-tertiary">自分にあったカードは？</h3>
 
@@ -539,7 +539,7 @@
     </div>
   </section>
 
-  <section class="section-quinary">
+  <section id="card" class="section-quinary">
     <div class="containers">
       <h3 class="ttl-tertiary">気になるカードを選んで、違いを比較!</h3>
       <h1 class="ttl-primary">カード比較・診断</h1>
@@ -626,7 +626,7 @@
         </a>
       </div>
 
-      <div class="banner-btn">
+      <a class="banner-btn">
         <div class="content-col">
           <div class="img-content">
             <img src="/assets/img/common/glass-look.png" alt="Your Image" class="credit-card-img" />
@@ -649,7 +649,7 @@
         <div class="btn-col">
           診断開始
         </div>
-      </div>
+      </a>
     </div>
   </section>
 
@@ -678,7 +678,7 @@
     </div>
   </section>
 
-  <section class="section-septenary">
+  <section id="reason" class="section-septenary">
     <div class="containers">
       <h4 class="ttl-primary">「クレディセゾンのビジネスカードが選ばれる理由</h4>
       <h1 class="ttl-quaternary">有効期限のない永久不滅ポイントやキャッシュバックのほか、<br> 利用する機会の多いビジネスサービスが充実! <br> セゾンのビジネスカードが人気の理由をご紹介します。
@@ -780,7 +780,7 @@
         <div class="ttl-tertiary small">当社のサポート担当がご利用用途やご要望をおうかがいさせていただき、<br> お客様にピッタリのカードをご提案いたします。お気軽にご相談ください。</div>
 
         <div class="quinary-btn">
-          <a href="#" class="blue_gradient_btn">サポート担当に無料で相談する</a>
+          <a href="/contact" class="blue_gradient_btn">サポート担当に無料で相談する</a>
         </div>
       </div>
     </div>
