--- a/app/pages/business_support_loan/index.njk
+++ b/app/pages/business_support_loan/index.njk
@@ -339,7 +339,7 @@
       </ul>
 
 
-      <a href="#" class="faq_more bondi_blue_outline_btn">
+      <a href="/faq" class="faq_more bondi_blue_outline_btn">
         <span class="bondi_blue_outline_btn__tittle">
           もっと見る
         </span>
