--- a/app/pages/payment_com/index.njk
+++ b/app/pages/payment_com/index.njk
@@ -196,6 +196,28 @@ link: "#material"
     </div>
   </section>
 
+  <section class="section-tertiary fadein">
+    <div class="section-tertiary-container">
+      <h1 class="ttl-primary">支払い.comが、「資金繰りのお悩み」を解決します。</h1>
+      <div class="act-more">
+        <div class="act-more-tooltip">
+          <h4 class="act-more-tooltip__content">{{"支払い.comの仕組みとメリットが \n 3分でわかる！" | safe}}</h4>
+        </div>
+        <div class="act-more-content">
+          <div class="act-more-content-img">
+            <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
+            <img class="secondary-img" src="/assets/img/common/documents_image.png" alt="Documents image 2">
+          </div>
+          <div class="act-more-content-btn">
+            <a href="#" class="blue_gradient_btn small">
+              サービス資料ダウンロード
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <section id="flow-of-usage" class="section-quaternary fadein">
     <div class="container-1200">
       <div class="ttl-notice">ご利用までの流れ</div>
@@ -256,28 +278,6 @@ link: "#material"
             </div>
             まずは無料登録からスタート
           </a>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="section-tertiary fadein">
-    <div class="section-tertiary-container">
-      <h1 class="ttl-primary">支払い.comが、「資金繰りのお悩み」を解決します。</h1>
-      <div class="act-more">
-        <div class="act-more-tooltip">
-          <h4 class="act-more-tooltip__content">{{"支払い.comの仕組みとメリットが \n 3分でわかる！" | safe}}</h4>
-        </div>
-        <div class="act-more-content">
-          <div class="act-more-content-img">
-            <img class="primary-img" src="/assets/img/common/documents_image.png" alt="Documents image 1">
-            <img class="secondary-img" src="/assets/img/common/documents_image.png" alt="Documents image 2">
-          </div>
-          <div class="act-more-content-btn">
-            <a href="#" class="blue_gradient_btn small">
-              サービス資料ダウンロード
-            </a>
-          </div>
         </div>
       </div>
     </div>
@@ -383,11 +383,11 @@ link: "#material"
           </li>
         {% endfor %}
       </ul>
-      <a href="#" class="faq_more bondi_blue_outline_btn">
+      {# <a href="/contact" class="faq_more bondi_blue_outline_btn">
         <span class="bondi_blue_outline_btn__tittle">
           もっと見る
         </span>
-      </a>
+      </a> #}
     </div>
   </section>
 
