--- a/app/pages/platinum_business/index.njk
+++ b/app/pages/platinum_business/index.njk
@@ -352,17 +352,17 @@
             </div>
 
             <div class="title-col">
-              <div>代表者 年会費</div>
+              <div>代表者 <br> 年会費</div>
             </div>
             <div class="">
-              <div class="content-col">
+              <div class="content-col height-80">
                 <div class="normal-text">
                   22,000円（税込）
                 </div>
               </div>
             </div>
             <div class="">
-              <div class="content-col">
+              <div class="content-col height-80">
                 <div class="normal-text">
                   永年無料
                 </div>
@@ -371,17 +371,17 @@
 
 
             <div class="title-col">
-              <div>追加カード 年会費</div>
+              <div>追加カード <br> 年会費</div>
             </div>
             <div class="">
-              <div class="content-col">
+              <div class="content-col height-80">
                 <div class="normal-text">
                   3,300円（税込）
                 </div>
               </div>
             </div>
             <div class="">
-              <div class="content-col">
+              <div class="content-col height-80">
                 <div class="normal-text">
                   永年無料
                 </div>
@@ -390,17 +390,17 @@
 
 
             <div class="title-col">
-              <div>追加カード 年会費</div>
+              <div>追加カード <br> 年会費</div>
             </div>
             <div class="">
-              <div class="content-col">
+              <div class="content-col height-80">
                 <div class="normal-text">
                   3,300円（税込）
                 </div>
               </div>
             </div>
             <div class="">
-              <div class="content-col">
+              <div class="content-col height-80">
                 <div class="normal-text">
                   永年無料
                 </div>
@@ -408,17 +408,17 @@
             </div>
 
             <div class="title-col">
-              <div>申し込み 資格</div>
+              <div>申し込み <br> 資格</div>
             </div>
             <div class="">
-              <div class="content-col height-70">
+              <div class="content-col height-80">
                 <div class="normal-text">
                   中小規模法人代表者（未成年者除く）
                 </div>
               </div>
             </div>
             <div class="">
-              <div class="content-col height-70">
+              <div class="content-col height-80">
                 <div class="normal-text">
                   個人事業主またはフリーランス、経営者の方（高校生除く）
                 </div>
