--- a/app/assets/scss/4-pages/_business_support_loan.scss
+++ b/app/assets/scss/4-pages/_business_support_loan.scss
@@ -264,6 +264,7 @@
 
           .ttl-quaternary {
             margin-bottom: 20px;
+            color: #000;
           }
         }
 
@@ -483,7 +484,7 @@
       margin: auto;
       margin-bottom: 60px;
       display: grid;
-      grid-template-columns: 27% 27% 27% 19%;
+      grid-template-columns: 31% 25% 25% 19%;
       box-shadow: 0 3px 20px #00000029;
       background: $white-color;
 
@@ -547,7 +548,8 @@
           .flow-content {
             font-size: 16px;
             font-weight: bold;
-            margin-top: 20px;
+            margin-top: 30px;
+            line-height: 1.5;
             flex-grow: 1;
 
             @media #{$sp} {
