--- a/app/assets/scss/4-pages/_payment_com.scss
+++ b/app/assets/scss/4-pages/_payment_com.scss
@@ -356,6 +356,7 @@
         .card-description {
           li {
             font-size: 16px;
+            margin-bottom: 11px;
           }
         }
         @media #{$sp} {
