--- a/app/pages/saison_welfare/index.njk
+++ b/app/pages/saison_welfare/index.njk
@@ -73,7 +73,7 @@ link: "#material"
     </div>
 
     <div class="section-welcome-container">
-      <div class="section-welcome-info">  
+      <div class="section-welcome-info">
         <div class="section-welcome-info-left">
           <div class="title-notice">
             <div class="title-content">
@@ -174,27 +174,30 @@ link: "#material"
             </li>
           </ul>
           <div class="jumbotron_welfare_service">
-            <h3 class="ttl-quaternary">このような中小企業様にピッタリの福利厚生サービスです。</h3>
-            <ul class="jumbotron_welfare_service_content">
-              <li>
-                <div>{% include 'component/icons/blue-tick.njk' %}</div>
-                <div><span class="font-weight-bold">従業員に喜んでもらえる・使ってもらえる</span>福利厚生を導入したい</div>
-                
-              </li>
-              <li>
-                <div>{% include 'component/icons/blue-tick.njk' %}</div>
-                <div><span class="font-weight-bold">初めて法定外福利厚生サービスを導入</span>するので、最初はコストを抑えたい</div>
-              </li>
-              <li>
-                <div>{% include 'component/icons/blue-tick.njk' %}</div>
-                <div>運用するのに<span class="font-weight-bold">手間をかけたくない</span></div>
-                
-              </li>
-              <li>
-                <div>{% include 'component/icons/blue-tick.njk' %}</div>
-                <div><span class="font-weight-bold">外国人の従業員が多い</span>ため、日本語以外の言語にも対応してほしい</div>
-              </li>
-            </ul>
+            <a href="#">
+              <h3 class="ttl-quaternary">このような中小企業様にピッタリの福利厚生サービスです。</h3>
+              <ul class="jumbotron_welfare_service_content">
+                <li>
+                  <div>{% include 'component/icons/blue-tick.njk' %}</div>
+                  <div><span class="font-weight-bold">従業員に喜んでもらえる・使ってもらえる</span>福利厚生を導入したい</div>
+
+                </li>
+                <li>
+                  <div>{% include 'component/icons/blue-tick.njk' %}</div>
+                  <div><span class="font-weight-bold">初めて法定外福利厚生サービスを導入</span>するので、最初はコストを抑えたい</div>
+                </li>
+                <li>
+                  <div>{% include 'component/icons/blue-tick.njk' %}</div>
+                  <div>運用するのに<span class="font-weight-bold">手間をかけたくない</span></div>
+
+                </li>
+                <li>
+                  <div>{% include 'component/icons/blue-tick.njk' %}</div>
+                  <div><span class="font-weight-bold">外国人の従業員が多い</span>ため、日本語以外の言語にも対応してほしい</div>
+                </li>
+              </ul>
+            </a>
+
           </div>
           <div class="saison-introduce">
             <div class="saison-introduce-video">
@@ -317,7 +320,8 @@ link: "#material"
                   <img src="/assets/img/saison_welfare/preferential_service_4.png" alt="preferential service 4">
                   <div class="preferential-service-description">
                     <div class="title">カラオケで</div>
-                    <div class="muted"> 東京ドームシティ得10チケット 1冊最大6,000円相当が</span><span class="special">2,790円(税込)</span></div>
+                    <div class="muted"> 東京ドームシティ得10チケット 1冊最大6,000円相当が</span><span class="special">2,790円(税込)</span>
+                    </div>
                   </div>
                 </a>
               </li>
