fix outside click menu

--- a/app/_template/partial/header.njk
+++ b/app/_template/partial/header.njk
@@ -25,10 +25,10 @@
             <a href="/sole_proprietorship/">個人事業主様向け</a>
           </li>
           <li class="nav__list__item__dropdown">
-            <a href="#">目的から探す</a>
+            目的から探す
           </li>
           <li class="nav__list__item__dropdown">
-            <a href="#">サポート情報</a>
+            サポート情報
           </li>
         </ul>
       </nav>
