--- a/app/_template/partial/top_header.njk
+++ b/app/_template/partial/top_header.njk
@@ -25,14 +25,14 @@
               <a href="/sole_proprietorship/" class="font-15px">個人事業主様向け</a>
             </li>
             <li class="nav__item__dropdown__search">
-              <a href="#" class="font-15px">目的から探す</a>
+              <a class="font-15px">目的から探す</a>
               <svg xmlns="http://www.w3.org/2000/svg" width="10.287" height="10.287" viewBox="0 0 10.287 10.287">
                 <path id="Path_1216" data-name="Path 1216" d="M6.274,0V6.274H0" transform="translate(5.143) rotate(45)"
                   fill="none" stroke="#0497b5" stroke-width="2" />
               </svg>
             </li>
             <li class="nav__item__dropdown__support">
-              <a href="#" class="font-15px">サポート情報</a>
+              <a class="font-15px">サポート情報</a>
               <svg xmlns="http://www.w3.org/2000/svg" width="10.287" height="10.287" viewBox="0 0 10.287 10.287">
                 <path id="Path_1216" data-name="Path 1216" d="M6.274,0V6.274H0" transform="translate(5.143) rotate(45)"
                   fill="none" stroke="#0497b5" stroke-width="2" />
@@ -197,22 +197,18 @@
         </a>
       </li>
       <li class="nav__item__dropdown__search">
-        <a>
-          <span>目的から探す</span>
-          <svg xmlns="http://www.w3.org/2000/svg" width="15.848" height="15.848" viewBox="0 0 15.848 15.848">
-            <path id="Path_1214" data-name="Path 1214" d="M9.706,0V9.706H0" transform="translate(0 7.924) rotate(-45)"
-              fill="none" stroke="#0497b5" stroke-width="3" />
-          </svg>
-        </a>
+        <span>目的から探す</span>
+        <svg xmlns="http://www.w3.org/2000/svg" width="15.848" height="15.848" viewBox="0 0 15.848 15.848">
+          <path id="Path_1214" data-name="Path 1214" d="M9.706,0V9.706H0" transform="translate(0 7.924) rotate(-45)"
+            fill="none" stroke="#0497b5" stroke-width="3" />
+        </svg>
       </li>
       <li class="nav__item__dropdown__support">
-        <a>
-          <span>サポート情報</span>
-          <svg xmlns="http://www.w3.org/2000/svg" width="15.848" height="15.848" viewBox="0 0 15.848 15.848">
-            <path id="Path_1214" data-name="Path 1214" d="M9.706,0V9.706H0" transform="translate(0 7.924) rotate(-45)"
-              fill="none" stroke="#0497b5" stroke-width="3" />
-          </svg>
-        </a>
+        <span>サポート情報</span>
+        <svg xmlns="http://www.w3.org/2000/svg" width="15.848" height="15.848" viewBox="0 0 15.848 15.848">
+          <path id="Path_1214" data-name="Path 1214" d="M9.706,0V9.706H0" transform="translate(0 7.924) rotate(-45)"
+            fill="none" stroke="#0497b5" stroke-width="3" />
+        </svg>
       </li>
     </ul>
   </div>
