show hide sidebar

--- a/app/_template/partial/sidebar.njk
+++ b/app/_template/partial/sidebar.njk
@@ -1,5 +1,5 @@
 {% if menuSidebar %}
-  <section class="rbt-sidearea rbt-select rbt-btn-horizontal-right rbt-btn-alt-no rbt-loaded">
+  <section class="rbt-sidearea rbt-select rbt-btn-horizontal-right rbt-btn-alt-no">
     <ul class="rbt-list">
       {% for item in menuSidebar %}
         <a class="rbt-item" href="{{ item.link }}">{{ item.text }}</a>
