--- a/app/assets/scss/4-pages/_payment_com.scss
+++ b/app/assets/scss/4-pages/_payment_com.scss
@@ -1,8 +1,18 @@
 .payment_com {
   .rbt-list {
     .rbt-item {
+      &:hover {
+        background: $orange-gradient;
+      }
+
       &.active {
         background: $orange-gradient;
+
+        &:hover {
+          background: transparent
+            linear-gradient(90deg, $primary-color 0%, $green-color-2 100%) 0% 0%
+            no-repeat padding-box;
+        }
       }
     }
   }
