--- a/app/pages/saison_invoice/index.njk
+++ b/app/pages/saison_invoice/index.njk
@@ -168,7 +168,7 @@
       <div class="container">
         <div class="saison-introduce">
           <div class="saison-introduce-video">
-            <iframe></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/30p1gPtcbDE?si=VGH5C1OZVzEYvjT8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
           </div>
 
           <div class="saison-introduce-description">
@@ -478,11 +478,11 @@
       </div>
 
       <div class="section-more">
-        <a href="#" class="act-more blue_gradient_btn">
+        <a href="/contact" class="act-more blue_gradient_btn">
           <div class="act-more-tooltip">
             <h4 class="act-more-tooltip__content">{{"手数料率は取引金額等をもとに\nアカウント審査時に決定します。\nお気軽にご相談ください。" | safe}}</h4>
           </div>
-          まずは無料登録からスタート
+          導入のご相談・お問い合わせはこちら（無料）
         </a>
       </div>
     </section>
