--- a/app/pages/business_card_creation/index.njk
+++ b/app/pages/business_card_creation/index.njk
@@ -28,12 +28,20 @@
 <main class="business_card_creation-page">
   <section class="section-welcome">
     <div class="container-1200">
-      <h3 class="ttl-tertiary">自分に合ったビジネスカードを</h3>
+      <div class="banner-container">
+        <div class="left-content">
+          <h3 class="ttl-tertiary">自分に合ったビジネスカードを</h3>
 
-      <h1 class="ttl-primary">クレディセゾンのビジネスカード</h1>
+          <h1 class="ttl-primary">クレディセゾンのビジネスカード</h1>
+    
+          <h4 class="ttl-quaternary">お客さまの活用シーンやニーズに合わせて、<br>
+            最適なビジネスカードをご用意しています。</h4>
+        </div>
 
-      <h4 class="ttl-quaternary">お客さまの活用シーンやニーズに合わせて、<br>
-        最適なビジネスカードをご用意しています。</h4>
+        <div class="right-content">
+          <img src="/assets/img/common/card_group.png" alt="work image" class="banner-img">
+        </div>
+      </div>
     </div>
   </section>
 
@@ -626,7 +634,7 @@
         </a>
       </div>
 
-      <a class="banner-btn">
+      <a href="https://www.saisoncard.co.jp/am_lp/advice_business/" target="_blank" class="banner-btn">
         <div class="content-col">
           <div class="img-content">
             <img src="/assets/img/common/glass-look.png" alt="Your Image" class="credit-card-img" />
@@ -688,7 +696,7 @@
         <div class="col-left col">
           <div class="card-header left">個人事業主・中小企業経営者様の場合</div>
           <div class="card-list">
-            <a class="card">
+            <div class="card">
               <div class="img-container">
                 <img src="/assets/img/common/card-img-1.png" alt="work image" class="card-img">
               </div>
@@ -699,8 +707,8 @@
                 <div class="content-subhead">マイルが効率的に貯まる!</div>
                 <div class="content-mainhead">最大還元率 1.125%</div>
               </div>
-            </>
-            <a class="card">
+            </div>
+            <div class="card">
               <div class="img-container">
                 <img src="/assets/img/common/card-img-2.png" alt="work image" class="card-img">
               </div>
@@ -711,8 +719,8 @@
                 <div class="content-subhead">有効期限のない</div>
                 <div class="content-mainhead">永久不滅ポイントが付与</div>
               </div>
-            </a>
-            <a class="card">
+            </div>
+            <div class="card">
               <div class="img-container">
                 <img src="/assets/img/common/card-img-3.png" alt="work image" class="card-img">
               </div>
@@ -723,7 +731,7 @@
                 <div class="content-subhead">収入証明書・登記簿謄本などが不要</div>
                 <div class="content-mainhead">起業直後でもお申し込み可能</div>
               </div>
-            </a>
+            </div>
           </div>
         </div>
         <div class="col-right col">
