--- a/app/pages/payment_com/index.njk
+++ b/app/pages/payment_com/index.njk
@@ -77,7 +77,7 @@ link: "#material"
           <h1 class="ttl-primary">支払い.com</h1>
           <h3 class="ttl-tertiary">全ての支払いを、<span class="special">最長60日後</span>に <br />カードで先延ばしできます。</h3>
           <div class="btn-action">
-            <a href="#" class="act-more orange_more2">
+            <a href="https://shi-harai.com/signup/" target="_blank" class="act-more orange_more2">
               <div class="act-more-tooltip">
                 <h4 class="act-more-tooltip__content">審査なし・書類提出不要！</h4>
               </div>
@@ -227,7 +227,7 @@ link: "#material"
       </h4>
       <div class="section-quaternary-content">
         <div class="flex gap60">
-          <a href="#" class="card">
+          <div class="card">
             <div class="card-title">
               <div class="step-no">STEP01</div>
               <div class="step-title">申し込み・カード決済</div>
@@ -239,8 +239,8 @@ link: "#material"
                 振込金額や口座情報を入力。同時に預り金として、振込金額＋利用手数料分のカード決済を行います。
               </div>
             </div>
-          </a>
-          <a href="#" class="card">
+          </div>
+          <div  class="card">
             <div class="card-title">
               <div class="step-no">STEP02</div>
               <div class="step-title">支払い.comが代わりに振込</div>
@@ -252,8 +252,8 @@ link: "#material"
                 指定日に支払い.comが口座振込を行います。お客様は振り込みをお待ち下さい。
               </div>
             </div>
-          </a>
-          <a href="#" class="card">
+          </div>
+          <div class="card">
             <div class="card-title">
               <div class="step-no">STEP03</div>
               <div class="step-title">支払い.comが代わりに振込</div>
@@ -266,13 +266,13 @@ link: "#material"
                 <span class="text-note">※支払い.comはカード会社より料金の回収を行うため、直接の返済は必要ありません。</span>
               </div>
             </div>
-          </a>
+          </div>
         </div>
         <div class="information">
           <span class="primary-txt">振込名義は自由に指定OK</span> 　お客様の名前で振り込みできるので、支払先へは利用を知られません
         </div>
         <div>
-          <a href="#" class="act-more orange_more2">
+          <a href="https://shi-harai.com/signup/" target="_blank" class="act-more orange_more2">
             <div class="act-more-tooltip">
               <h4 class="act-more-tooltip__content">{{ "お急ぎの方はまずは無料登録！\n 審査や書類提出は必要ありません。" | safe }}</h4>
             </div>
@@ -409,7 +409,7 @@ link: "#material"
                     支払い.comのサービス資料をダウンロートできます。フォーム入力後リアルタイムでお送りいたします。
                   </div>
                 </div>
-                <div><a class="blue_gradient_btn" href="#">ご相談・お問い合わせ（無料）</a></div>
+                <div><a href="/contact" class="blue_gradient_btn" href="#">ご相談・お問い合わせ（無料）</a></div>
               </summary>
           </div>
           <div href="#" class="card">
@@ -423,7 +423,7 @@ link: "#material"
                     支払い.comのサービス資料をダウンロートできます。フォーム入力後リアルタイムでお送りいたします。
                   </div>
                 </div>
-              <div><a class="blue_gradient_btn" href="#">審査おお申し込み</a></div>
+              <div><a href="https://shi-harai.com/signup/" target="_blank" class="blue_gradient_btn" href="#">審査お申し込み</a></div>
             </summary>
           </div>
         </div>
