--- a/app/_template/partial/top_header.njk
+++ b/app/_template/partial/top_header.njk
@@ -211,6 +211,19 @@
         </svg>
       </li>
     </ul>
+    <div class="nav__button">
+      <div class="flex">
+        <div>   
+          <a href="/seminar_list/" class="font-12px">セミナー・動画</a>
+        </div>
+        <div>
+          <a href="/whitepaper/" class="font-12px">お役立ち資料</a>
+        </div>
+      </div>
+      <div class="nav__list__button">
+        <a href="/contact/">ご相談・お問い合わせ</a>
+      </div>
+    </div>
   </div>
 
   <div class="nav__dropdown__list__search sp-only">
