--- a/app/assets/scss/3-modules/_top-header.scss
+++ b/app/assets/scss/3-modules/_top-header.scss
@@ -258,6 +258,50 @@ header {
           padding: 0 0 10px;
         }
       }
+
+      .nav__button {
+
+        .flex{
+          display: flex;
+          justify-content: space-between;
+          margin: 20px 0;
+        }
+
+        a {
+          display: inline-block;
+          font-weight: 500;
+          color: $white-color;
+          padding: 15px 35px;
+          background: $gradient-bg-2;
+          border-radius: 3px;
+          line-height: initial;
+          transition: all 0.3s;
+          border: 1px solid $black-color;
+          &:hover {
+            opacity: 1;
+            color: $black_color;
+            background: $white-color;
+            border: 1px solid $black-color;
+          }
+        }
+
+        .nav__list__button {
+          a {
+            width: 100%;
+            border: none;
+            display: inline-block;
+            color: white;
+            background: $gradient-bg;
+            text-align: center;
+            font-weight: 700;
+            transition: all 0.3s;
+            &:hover {
+              opacity: 1;
+              background: $gradient-bg-reverse;
+            }
+          }
+        }
+      }
     }
     &__back {
       margin-top: 30px;
