--- a/app/assets/scss/4-pages/_cospro.scss
+++ b/app/assets/scss/4-pages/_cospro.scss
@@ -270,9 +270,13 @@
     .containers {
       padding: 30px;
     }
+    .ttl-primary {
+      margin-bottom: 80px;
+    }
     @media #{$sp} {
       .ttl-primary {
         font-size: 21px;
+        margin-bottom: 50px;
       }
     }
 
@@ -286,6 +290,22 @@
       grid-template-columns: repeat(3, 1fr);
       gap: 30px;
       .card {
+        .card-head {
+          position: absolute;
+          top: -20px;
+          left: 50%;
+          transform: translateX(-50%);
+          background: transparent
+            linear-gradient(90deg, #111111 0%, #343434 100%) 0% 0% no-repeat
+            padding-box;
+          width: 200px;
+          height: 40px;
+          border-radius: 24px;
+          color: #fff;
+          line-height: 40px;
+          font-size: 16px;
+          font-weight: bold;
+        }
         box-shadow: 0px 3px 20px #0000001c;
         border-radius: 3px;
         padding: 30px;
