--- a/app/pages/cospro/index.njk
+++ b/app/pages/cospro/index.njk
@@ -132,6 +132,7 @@
       <h4 class="ttl-primary">このようなお悩みをお持ちの企業様向けのサービスです。</h4>      
       <div class="grid-card-containers">
         <a class="card">
+          <div class="card-head">お悩み①</div>
           <h2 class="ttl-head">出張手配は社員任せ。<br> 金額の妥当性が判断できない</h2>
           <img src="/assets/img/cospro/card4.png" alt="work image" class="card-img">
           <ul class="ttl-normal">
@@ -142,6 +143,7 @@
         </a>
         
         <a class="card">
+          <div class="card-head">お悩み②</div>
           <h2 class="ttl-head">出張手配に時間がかかり <br>「見えないコスト」が上昇</h2>
           <img src="/assets/img/cospro/card5.png" alt="work image" class="card-img">
           <ul class="ttl-normal">
@@ -152,6 +154,7 @@
         </a>
 
         <a class="card">
+          <div class="card-head">お悩み３</div>
           <h2 class="ttl-head">出張手配のルールがない。<br> ガバナンスが不安・・・</h2>
           <img src="/assets/img/cospro/card6.png" alt="work image" class="card-img">
           <ul class="ttl-normal">
